tests/snapshots/file@assignment@to_this.lox.snap
---
source: tests/common/mod.rs
description: "class Foo {\n  Foo() {\n    this = \"value\"; // Error at '=': Invalid assignment target.\n  }\n}\n\nFoo();\n"
input_file: crafting_interpreters_test_files/assignment/to_this.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × invalid assignment target
   ╭─[3:10]
 2 │   Foo() {
 3 │     this = "value"; // Error at '=': Invalid assignment target.
   ·          ┬
   ·          ╰── here
 4 │   }
   ╰────
